src/main/docs/raml/examples/errors/updateUserWithPassword.raml
|
 {
   "errors" : [ {
     "value" : "asddfdsfdsf",
     "field" : "password",
     "message" : "must be null"
   } ],
   "_links" : {
     "self" : {
       "href" : "http://localhost:8080/users/1"
     }
   }
 }